syntax = "proto3";

import "common_domain.proto";
import "google/protobuf/timestamp.proto";

package app.improving.membercontext;


enum NotificationPreference {
    NOTIFICATION_PREFERENCE_EMAIL = 0;
    NOTIFICATION_PREFERENCE_SMS = 1;
    NOTIFICATION_PREFERENCE_APPLICATION = 2;
}

enum MemberStatus {
    MEMBER_STATUS_ACTIVE = 0;
    MEMBER_STATUS_INACTIVE = 2;
    MEMBER_STATUS_SUSPENDED = 3;
    MEMBER_STATUS_TERMINATED = 4;
    MEMBER_STATUS_UNKNOWN = 5;
}

message Info {
    Contact contact = 1;
    string handle = 2;
    string avatar = 3; // URL type?
    string first_name = 4;
    string last_name = 5;
    NotificationPreference notification_preference = 6;
    repeated OrganizationId organization_membership = 7;
    optional TenantId tenant = 8;
}

message MemberData {
    MemberId member_id = 1;
    Info info = 2;
    MetaInfo meta = 3;
}

message MemberInfoUpdated {
    MemberId member_id = 1;
    Info info = 2;
    MetaInfo meta = 3;
}

message MemberListRegistered {
    MemberMap member_list = 1;
    MemberId registering_member = 2;
}

message MemberListResult {
    MemberMap members = 1;
}

message MemberRegistered {
    MemberId member_id = 1;
    Info info = 2;
    MetaInfo meta = 3;
}

message MemberStatusUpdated {
    MemberId member_id = 1;
    MetaInfo meta = 2;
}

message MetaInfo {
    google.protobuf.Timestamp created_on = 1;
    MemberId created_by = 2;
    google.protobuf.Timestamp last_modified_on = 3;
    MemberId last_modified_by = 4;
    MemberStatus member_status = 5;
}

message MetaInfoQuery {
    google.protobuf.Timestamp created_on = 1;
    MemberId created_by = 2;
    google.protobuf.Timestamp last_modified_on = 3;
    MemberId last_modified_by = 4;
    MemberStatus member_status = 5;
}

message MemberMap {
    map<string, Info> map = 1;
}

message UpdateInfo {
    Contact contact = 1;
    string handle = 2;
    string avatar = 3; // URL type?
    string first_name = 4;
    string last_name = 5;
    NotificationPreference notification_preference = 6;
    repeated  OrganizationId organization_membership = 7;
    TenantId tenant_id = 8;
}